# CenterPointPillar

./: .env  .gitignore  LICENSE  README.md  docker-compose.yaml  requirements.txt
TensorRT/: CMakeLists.txt
TensorRT/include/centerpoint/: PillarScatterCommon.hpp  pillarScatter.hpp  pillarScatterKernels.hpp
TensorRT/src/: main.cc
TensorRT/src/centerpoint/: pillarScatter.cpp  pillarScatterKernels.cu
centerpoint/: CMakeLists.txt  package.xml
centerpoint/cmake/: FindTensorRT.cmake
centerpoint/config/: config.yaml
centerpoint/include/centerpoint/: base.hpp  centerpoint.hpp  config.h  network.hpp  postprocess.hpp  voxelization.cuh  voxelization.hpp
centerpoint/launch/: centerpoint.launch.py
centerpoint/pybind/: CMakeLists.txt  main.py  module.cc  npy_forward.cc
centerpoint/pybind/include/pillarscatter/: pillarscatter.hpp
centerpoint/pybind/include/pycenterpoint/: base.hpp  centerpoint.hpp  network.hpp  npy.hpp  postprocess.hpp  voxelization.hpp
centerpoint/pybind/src/pycenterpoint/: centerpoint.cc  network.cc  postprocess.cc  postprocess.cu  voxelization.cc  voxelization.cu
centerpoint/src/: main.cc
centerpoint/src/centerpoint/: centerpoint.cc  network.cc  postprocess.cc  postprocess.cu  voxelization.cc  voxelization.cu
centerpoint/src/pillarscatter/: pillarscatter-kernel.cu  pillarscatter.cc
data/waymo/ImageSets/: train_refactoring.txt  val_refactoring.txt  val_tensorrt.txt
data/waymo_refactoring/ImageSets/: val_refactoring.txt
docker/: Dockerfile  README.md  env.Dockerfile
docs/: 1_Setting_Environment_using_Docker.md  2_Prepare_Waymo_Dataset.md  2_Preparing_Waymo_Dataset.md  3_Setting_OpenPCDet.md  4_Training.md  5_Testing_Evaluation.md  6_Convert_Models.md  7_Testing_Evaluation_with_TensoRT.md  8_Inference_ROS2_TensorRT_Python.md  9_Inference_ROS2_TensorRT_Cpp.md
general/config/: config.py
general/datasets/: dataset_template.py  distributed_sampler.py
general/datasets/augmentor/: augmentor_utils.py  data_augmentor.py  database_sampler.py
general/datasets/processor/: data_processor.py  point2voxel.py  point_cloud_ops.py  pointops.py  spconv_1x.py  voxel_generator.py  voxel_generator_spconv.py
general/loss_functions/: loss_utils.py
general/networks/: nms_utils.py
general/optimization/: __init__.py  learning_schedules_fastai.py
general/utilities/: box_utils.py  data_utils.py  eval_utils.py  spconv_utils.py  train_utils.py
object_detection/: test.py  train.py
object_detection/datasets/: __init__.py
object_detection/datasets/custom/: custom_dataset.py
object_detection/datasets/kitti/: kitti_dataset.py  kitti_utils.py
object_detection/datasets/nuscenes/: nuscenes_dataset.py
object_detection/datasets/waymo/: waymo_dataset.py  waymo_utils.py
object_detection/detectors3d/: __init__.py  detector3d_template.py
object_detection/detectors3d/centerpoint_pillar/: centerpoint.py
object_detection/detectors3d/centerpoint_pillar/heads_4th/: __init__.py  center_head.py  center_separate_head.py
pcdet/datasets/: __init__.py
pcdet/models/: __init__.py
pcdet/models/backbones_2d/: base_bev_backbone.py  base_bev_backbone_v1.py  base_bev_res_backbone.py  base_bev_res_backbone_basic_block.py
pcdet/models/backbones_2d/fuser/: __init__.py  convfuser.py
pcdet/models/backbones_2d/map_to_bev/: __init__.py  conv2d_collapse.py  height_compression.py  pointpillar_scatter3d.py
pcdet/models/centerpoint_pillar/backbones/: __init__.py
pcdet/models/centerpoint_pillar/dense_heads/: center_head.py
pcdet/models/centerpoint_pillar/detectors/: __init__.py
pcdet/models/centerpoint_pillar/map_to_bev/: __init__.py  pointpillar_scatter.py
pcdet/models/dense_heads/: __init__.py  center_head.py
pcdet/models/detector3d/: __init__.py  detector3d_template.py
pcdet/models/detector3d/centerpoint_pillar/: centerpoint.py
pcdet/models/detector3d/centerpoint_pillar/heads_4th/: center_head.py
pcdet/models/detector3d/centerpoint_pillar/voxel_feature_encoding_1st/: pfn_layer.py  pillar_vfe.py
pcdet/models/detectors/: __init__.py  centerpoint.py  detector3d_template.py
pcdet/ops/iou3d_nms/: iou3d_nms_utils.py
pcdet/ops/roiaware_pool3d/: roiaware_pool3d_utils.py
pcdet/utils/: box_utils.py  commu_utils.py  loss_utils.py  spconv_utils.py
removal/pcdet/models/backbones_3d/: __init__.py
removal/pcdet/models/backbones_3d/vfe/: pillar_vfe.py
removal/pcdet/models/detectors/: __init__.py  detector3d_template.py
removal/pcdet/models/view_transforms/: __init__.py
scripts/: dist_test.sh  dist_train.sh  run_create_waymo_data.sh  slurm_test_mgpu.sh  slurm_test_single.sh  slurm_train.sh  slurm_train_v2.sh  torch_test.sh  torch_train.sh
tools/: demo.py  export_onnx.py  modify_onnx.py  ros2_demo.py  test.py  train.py
tools/cfgs/dataset_configs/: waymo_dataset_refactoring.yaml  waymo_dataset_use_feature_no_elongation.yaml  waymo_inference.yaml  waymo_inference_tensorrt.yaml
tools/cfgs/waymo_models/: centerpoint_pillar_inference.yaml  centerpoint_pillar_train.yaml  centerpoint_pillar_train_refactoring.yaml
tools/eval_utils/: eval_utils.py
tools/scripts/: slurm_train.sh
tools/tensorrt_plugin/: CMakeLists.txt
tools/tensorrt_plugin/pillarscatter/: pillarscatter-kernel.cu  pillarscatter-kernel.cuh  pillarscatter.cpp
tools/tensorrt_plugin/pointpillar/: pointpillar-scatter.hpp
tools/train_utils/: train_utils.py
